Fix filter by types call

--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -8,7 +8,7 @@
       <ion-col size="auto">
         <ion-list>
           <ion-item>
-            <ion-select (ionChange)="filterByType($event.detail.value)" [multiple]="true"
+            <ion-select (ionChange)="filterByType($event)" [multiple]="true"
                         aria-label="Pokémon type"
                         placeholder="{{'SEARCH TYPE'| translate}}"
             >
