--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,15 +2,12 @@
   <ion-toolbar>
     <ion-grid>
       <ion-row class="ion-justify-content-around">
-        <ion-col size="1">
+        <ion-col class="ion-align-self-center" size="2">
           <ion-icon (click)="utilsService.goBackToPokedex()" name="home-outline"></ion-icon>
         </ion-col>
-        <ion-col size="1">
-          <ion-button (click)="presentPopover($event)" color="light"
-                      shape="round" size="small">
-            <ion-icon name="person-circle-outline">
-            </ion-icon>
-          </ion-button>
+        <ion-col class="ion-align-self-center" size="2">
+          <ion-icon (click)="presentPopover($event)" name="person-circle-outline">
+          </ion-icon>
         </ion-col>
       </ion-row>
     </ion-grid>
