--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -10,7 +10,7 @@
           <ion-item>
             <ion-select (ionChange)="filterByType($event)" [multiple]="true"
                         aria-label="Pokémon type"
-                        placeholder="{{'SEARCH TYPE'| translate}}"
+                        placeholder="{{'SELECT TYPE'| translate}}"
             >
               <ion-select-option *ngFor="let type of allTypes"
                                  value="{{type}}">{{'TYPES.' + type | translate | typeName }}</ion-select-option>
