--- a/src/app/pages/login/login-page.component.html
+++ b/src/app/pages/login/login-page.component.html
@@ -6,8 +6,7 @@
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-label position="floating">{{'USERNAME' | translate}}</ion-label>
-          <ion-input [formControl]="loginCtrl" type="text"></ion-input>
+          <ion-input [formControl]="loginCtrl" type="text" label="{{'USERNAME' | translate}}"></ion-input>
           <ion-label *ngIf="loginCtrl.dirty && loginCtrl.hasError('required')">
             * {{'USERNAME' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
         </ion-item>
@@ -16,8 +15,7 @@
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-label position="floating">{{'PASSWORD' | translate}}</ion-label>
-          <ion-input [formControl]="passwordCtrl" type="password"></ion-input>
+          <ion-input [formControl]="passwordCtrl" type="password" label="{{'PASSWORD' | translate}}"></ion-input>
           <ion-label
             *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('required')">{{'PASSWORD' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
         </ion-item>
