style : responsive main title

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,8 +8,8 @@ ion-icon {
 
 .main-title {
   cursor: pointer;
-  font-size: 24px;
+  font-size: 2em;
   font-family: 'Press Start 2P', cursive;
-  padding: 0;
+  height: 100%;
 }
 
