--- a/src/app/pages/team/team.component.html
+++ b/src/app/pages/team/team.component.html
@@ -1,21 +1,24 @@
 <ion-content>
   <ion-grid>
     <ion-row *ngIf="currentUser">
-      <ion-col *ngFor="let pokemon of currentUser.pokemonTeam; let index = index" sizeXs="12" sizeMd="2">
+      <ion-col *ngFor="let pokemon of currentUser.pokemonTeam; let index = index" sizeMd="2" sizeXs="12">
         <ion-card [ngStyle]="{'background': pokemon.types.length == 1 ?
                   pokemon.color[0] : 'linear-gradient(to right,'+ pokemon.color[0] + ',' + pokemon.color[1]+ ')'
                   }"
         >
           <ion-card-header>
-            <ion-card-title>#{{pokemon.id}} {{'NAMES.' + pokemon.name | translate}}
+            <ion-card-title *ngIf="pokemon.chosenName; else elseBlock">{{pokemon.chosenName}}
             </ion-card-title>
+            <ng-template #elseBlock>
+              <ion-card-title>{{'NAMES.' + pokemon.name | translate}}</ion-card-title>
+            </ng-template>
           </ion-card-header>
           <ion-card-content>
-            <ion-img id="img" [alt]="pokemon.name" [src]="pokemon.img"></ion-img>
-            <ion-button color="light" (click)="setOpen(true, index)">
+            <ion-img [alt]="pokemon.name" [src]="pokemon.img" id="img"></ion-img>
+            <ion-button (click)="setOpen(true, index)" color="light">
               <ion-icon name="pencil-sharp"></ion-icon>
             </ion-button>
-            <ion-button color="light" (click)="deletePokemon(index)">
+            <ion-button (click)="deletePokemon(index)" color="light">
               <ion-icon name="trash"></ion-icon>
             </ion-button>
           </ion-card-content>
@@ -39,7 +42,7 @@
         <ion-content class="ion-padding">
           <ion-item>
             <ion-label position="stacked">{{'NEW_POKEMON_NAME' | translate}} :</ion-label>
-            <ion-input type="text" [formControl]="pokemonName"></ion-input>
+            <ion-input [formControl]="pokemonName" type="text"></ion-input>
           </ion-item>
         </ion-content>
       </ng-template>
