feat: CaptureComponent in module

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,6 +5,9 @@
         <ion-col class="ion-hide-sm-down" size="2">
           <ion-title (click)="utilsService.goBackToPokedex()" class="main-title">Pokédex</ion-title>
         </ion-col>
+        <ion-col sizeLg="1">
+          <ion-button color="light" (click)="goToCaptureMode()">Capture</ion-button>
+        </ion-col>
         <ion-col size="auto">
           <ion-row>
             <ion-col size="auto">
