--- a/src/app/pages/all-pokemons/all-pokemons.component.html
+++ b/src/app/pages/all-pokemons/all-pokemons.component.html
@@ -47,6 +47,8 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <ion-item-divider>
+  </ion-item-divider>
   <ion-grid>
     <ion-row>
       <ion-col *ngFor="let pokemon of pokemonArray" size="12" sizeMd="3">
