--- a/src/app/pages/capture/capture.component.html
+++ b/src/app/pages/capture/capture.component.html
@@ -22,6 +22,11 @@
           </ion-row>
         </ion-col>
       </ion-row>
+      <ion-row *ngIf="(userObservable$ | async).userName">
+        <ion-button (click)="userService.addPokemon(randomPokemon)"
+                    color="light"> {{'CATCH' | translate}}
+        </ion-button>
+      </ion-row>
     </ng-container>
   </ion-grid>
 </ion-content>
