--- a/src/app/pages/all-pokemons/all-pokemons.component.html
+++ b/src/app/pages/all-pokemons/all-pokemons.component.html
@@ -1,6 +1,13 @@
 <ion-content>
   <ion-grid>
     <ion-row class="ion-justify-content-center">
+      <ion-col sizeXs="6" class="ion-hide-sm-up">
+        <ion-button (click)="goToCaptureMode()" color="light">{{'CATCH' | translate}} Mode</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-item-divider class="ion-justify-content-center">
+    </ion-item-divider>
+    <ion-row class="ion-justify-content-center">
       <ion-col sizeLg="3" sizeXs="12">
         <ion-searchbar (keyup.enter)="filterByName()" [formControl]="pokemon"
                        placeholder="{{'SEARCH POKEMON'| translate}}"></ion-searchbar>
