--- a/src/app/pages/capture/capture.component.html
+++ b/src/app/pages/capture/capture.component.html
@@ -1,26 +1,27 @@
 <ion-content>
   <ion-grid>
-    <ion-button (click)="launchEncounter()" color="light">{{'ENCOUNTER' | translate}} !</ion-button>
+    <ion-button (click)="launchEncounter()" class="ion-hide-sm-down" color="light">{{'ENCOUNTER' | translate}}!
+    </ion-button>
     <ng-container *ngIf="randomPokemon">
       <ion-row class="ion-justify-content-center">
         <ion-title class="ion-text-center">
           #{{randomPokemon.id}} {{'NAMES.' + randomPokemon.name | translate}}
         </ion-title>
       </ion-row>
-      <ion-row>
-        <ion-col offsetLg="6" sizeLg="2">
+      <ion-row class="ion-justify-content-center">
+        <ion-col size="8" sizeLg="3">
           <ion-img [alt]="randomPokemon.name" [src]="randomPokemon.img" id="img"></ion-img>
-          <ion-row>
-            <ion-text *ngIf="randomPokemon.types.length == 1">
-              {{'NAMES.' + randomPokemon.name | translate}} {{'CARD_SUBJECT_ONE' | translate}}
-              {{'TYPES.' + randomPokemon.types[0] | translate}}.
-            </ion-text>
-            <ion-text *ngIf="randomPokemon.types.length > 1">
-              {{'NAMES.' + randomPokemon.name | translate}} {{'CARD_SUBJECT_TWO' | translate}} {{'TYPES.' + randomPokemon.types[0] | translate}}
-              /{{'TYPES.' + randomPokemon.types[1] | translate}}.
-            </ion-text>
-          </ion-row>
         </ion-col>
+      </ion-row>
+      <ion-row class="ion-justify-content-center">
+        <ion-text *ngIf="randomPokemon.types.length == 1">
+          {{'NAMES.' + randomPokemon.name | translate}} {{'CARD_SUBJECT_ONE' | translate}}
+          {{'TYPES.' + randomPokemon.types[0] | translate}}.
+        </ion-text>
+        <ion-text *ngIf="randomPokemon.types.length > 1">
+          {{'NAMES.' + randomPokemon.name | translate}} {{'CARD_SUBJECT_TWO' | translate}} {{'TYPES.' + randomPokemon.types[0] | translate}}
+          /{{'TYPES.' + randomPokemon.types[1] | translate}}.
+        </ion-text>
       </ion-row>
       <ion-row *ngIf="(userObservable$ | async).userName" class="ion-justify-content-center">
         <ion-button (click)="userService.addPokemon(randomPokemon)"
@@ -29,4 +30,5 @@
       </ion-row>
     </ng-container>
   </ion-grid>
+  <ion-button (click)="launchEncounter()" color="light" slot="fixed">{{'ENCOUNTER' | translate}} !</ion-button>
 </ion-content>
