--- a/src/app/components/user-popover/user-popover.component.html
+++ b/src/app/components/user-popover/user-popover.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="!currentUser.userName">
   <ion-row class="nav-link ion-align-items-end">
     <ion-icon name="person-outline"></ion-icon>
-    <a (click)="handleNavigation('signin', true)">{{'SIGNIN' | translate}}
-    </a>
+    <ion-nav-link (click)="handleNavigation('signin', true)">{{'SIGNIN' | translate}}
+    </ion-nav-link>
   </ion-row>
   <ion-row class="nav-link ion-align-items-end">
     <ion-icon name="log-in-outline"></ion-icon>
@@ -12,7 +12,7 @@
 </ng-container>
 <ng-container *ngIf="currentUser.userName">
   <ion-row class="nav-link ion-align-items-end">
-    <a (click)="handleNavigation('account', true)">{{'ACCOUNT' | translate}}</a>
+    <ion-nav-link (click)="handleNavigation('account', true)">{{'ACCOUNT' | translate}}</ion-nav-link>
   </ion-row>
   <ion-row class="nav-link ion-align-items-end">
     <a (click)="userService.logOut()">{{'LOGOUT' | translate}}</a>
