style: header refacto

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,11 +2,11 @@
   <ion-toolbar>
     <ion-grid>
       <ion-row class="ion-justify-content-around">
-        <ion-col class="ion-hide-sm-down" size="6">
+        <ion-col class="ion-hide-sm-down" size="6" sizeLg="2">
           <ion-title (click)="utilsService.goBackToPokedex()" class="main-title">Pokédex</ion-title>
         </ion-col>
         <ion-col sizeLg="2">
-          <ion-button (click)="goToCaptureMode()" color="light">{{'CATCH' | translate}} Mode</ion-button>
+          <ion-button (click)="goToCaptureMode()" color="light">{{'CATCH MODE' | translate}}</ion-button>
         </ion-col>
         <ion-col size="auto">
           <ion-row class="ion-align-items-center">
