--- a/src/app/pages/all-pokemons/all-pokemons.component.html
+++ b/src/app/pages/all-pokemons/all-pokemons.component.html
@@ -2,10 +2,10 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col sizeXs="6" class="ion-hide-sm-up">
-        <ion-button (click)="goToCaptureMode()" color="light">{{'CATCH' | translate}} Mode</ion-button>
+        <ion-button (click)="goToCaptureMode()" color="light">{{'CATCH MODE' | translate}}</ion-button>
       </ion-col>
     </ion-row>
-    <ion-item-divider class="ion-justify-content-center">
+    <ion-item-divider class="ion-hide-sm-up">
     </ion-item-divider>
     <ion-row class="ion-justify-content-center">
       <ion-col sizeLg="3" sizeXs="12">
