--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,8 +3,12 @@
 
 .main-title {
   cursor: pointer;
-  font-size: 2em;
+  font-size: 1.5em;
   font-family: 'Press Start 2P', cursive;
   height: 100%;
+}
+
+.user-icon {
+  cursor: pointer;
 }
 
