--- a/src/app/pages/capture/capture.component.html
+++ b/src/app/pages/capture/capture.component.html
@@ -1,7 +1,5 @@
 <ion-content>
   <ion-grid>
-    <ion-button (click)="launchEncounter()" class="ion-hide-sm-down" color="light">{{'ENCOUNTER' | translate}}!
-    </ion-button>
     <ng-container *ngIf="randomPokemon">
       <ion-row class="ion-justify-content-center">
         <ion-title class="ion-text-center">
@@ -23,17 +21,18 @@
           /{{'TYPES.' + randomPokemon.types[1] | translate}}.
         </ion-text>
       </ion-row>
-      <ion-row *ngIf="(userObservable$ | async).userName; else elseBlock" class="ion-justify-content-center" class="ion-justify-content-center">
-        <ion-button (click)="addPokemon(randomPokemon)"
-                    [disabled]="alreadyCatch" color="success"> {{'CATCH' | translate}}
-        </ion-button>
+      <ion-row *ngIf="!(userObservable$ | async).userName" class="ion-justify-content-center">
+        <ion-text color="success">Log in to catch Pokémon !</ion-text>
       </ion-row>
-      <ng-template #elseBlock>
-        <ion-row class="ion-justify-content-center">
-          <ion-text color="success">Log in to catch Pokémon !</ion-text>
-        </ion-row>
-      </ng-template>
     </ng-container>
   </ion-grid>
-  <ion-button (click)="launchEncounter()" color="light" slot="fixed">{{'ENCOUNTER' | translate}} !</ion-button>
+  <ion-button (click)="addPokemon(randomPokemon)"
+              *ngIf="(userObservable$ | async).userName && randomPokemon"
+              [disabled]="alreadyCatch"
+              class="catch-button" color="success"
+              slot="fixed"> {{'CATCH' | translate}}
+  </ion-button>
+  <ion-button (click)="launchEncounter()" class="encounter-button" color="light"
+              slot="fixed">{{'ENCOUNTER' | translate}} !
+  </ion-button>
 </ion-content>
