--- a/src/app/components/user-popover/user-popover.component.html
+++ b/src/app/components/user-popover/user-popover.component.html
@@ -15,6 +15,6 @@
     <a (click)="handleNavigation('account', true)">{{'ACCOUNT' | translate}}</a>
   </ion-row>
   <ion-row class="nav-link ion-align-items-end">
-    <a (click)="userService.logOut()">{{'LOGOUT' | translate}}</a>
+    <a (click)="logOut()">{{'LOGOUT' | translate}}</a>
   </ion-row>
 </ng-container>
