fix: feat capture redirect on login when no user

--- a/src/app/pages/capture/capture.component.html
+++ b/src/app/pages/capture/capture.component.html
@@ -24,7 +24,7 @@
     </ng-container>
   </ion-grid>
   <ion-button (click)="addPokemon(randomPokemon)"
-              *ngIf="currentUser.userName && randomPokemon"
+              *ngIf="randomPokemon"
               [disabled]="alreadyCatch"
               class="catch-button" color="success"> {{'CATCH' | translate}}
   </ion-button>
