--- a/src/app/components/user-popover/user-popover.component.scss
+++ b/src/app/components/user-popover/user-popover.component.scss
@@ -1,15 +1,13 @@
 @import '../../../theme/variables';
 
-.nav-link {
+ion-nav-link {
   padding: 10px;
   margin: 2px 0;
+  text-decoration: none;
+
   &:hover {
     cursor: pointer;
     background-color: $hover-link;
+    color: $black;
   }
-}
-
-a {
-  text-decoration: none;
-  color: $black;
 }
