--- a/src/global.scss
+++ b/src/global.scss
@@ -29,3 +29,12 @@
   width: 30px;
   height: 30px;
 }
+
+ion-popover {
+  --box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.6);
+  --width: 150px;
+  z-index: 1;
+}
+
+
+
